Log4j2 configuration
Change-Id: I7cc670295b760574aa606e20697c917b107c9226